<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab2"
    android:padding="16dp"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab2_title"
            android:gravity="center"
            android:id="@+id/tv_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/navy_dark"/>
        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/tabung"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/iv_tabung"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_jari"
            android:id="@+id/in_r"
            android:textSize="16sp"
            android:layout_below="@id/iv_tabung"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:inputType="numberDecimal"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_tinggi"
            android:id="@+id/in_t"
            android:layout_below="@id/in_r"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hitung"
            android:id="@+id/btn_hitung"
            android:layout_below="@id/in_t"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lp_tv"
            android:textStyle="bold"
            android:textColor="@color/navy"
            android:textSize="12sp"
            android:layout_marginTop="30dp"
            android:id="@+id/tv_title_lp"
            android:layout_below="@id/btn_hitung"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rumus_lp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_below="@id/tv_title_lp"
            android:id="@+id/tv_hasillp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v_tv"
            android:textStyle="bold"
            android:textColor="@color/navy"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:id="@+id/tv_title_v"
            android:layout_below="@id/tv_hasillp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rumus_v"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_below="@id/tv_title_v"
            android:id="@+id/tv_hasilv" />
    </RelativeLayout>
</FrameLayout>